# nuxt-drf

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Makefile  nuxt.config.js  package.json  pyproject.toml
backend/: db.sqlite3
backend/apps/base/: admin.py  apps.py  authenticate.py  forms.py  models.py  urls.py  views.py
backend/apps/base/management/commands/: createapp.py  defaultadmin.py
backend/apps/base/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_auto_20210807_1815.py  0004_auto_20210807_1826.py
backend/apps/base/services/: __init__.py  checking_uniqueness_email_user.py  create_user.py  get_user_cookie_httponly.py
backend/apps/base/v1/: __init__.py  routers.py  serializers.py  views.py
backend/core/: urls.py  views.py
backend/core/api/: __init__.py  apps.py  urls.py  views.py
backend/core/api/templates/api/: desctiption.html
backend/core/api/v1/: __init__.py  urls.py
backend/core/settings/: __init__.py  common.py  environment.py  local.py  production.py
frontend/assets/sass/: app.sass
frontend/assets/sass/abstracts/: _functions.sass  _index.sass  _mixins.sass  _variables.sass
frontend/assets/sass/base/: _base.sass  _fonts.sass  _index.sass
frontend/assets/sass/components/: _index.sass  _swal.sass
frontend/assets/sass/layout/: _index.sass
frontend/assets/sass/pages/: _index.sass  _login.sass
frontend/assets/sass/themes/: _index.sass
frontend/assets/sass/vendors/: _index.sass
frontend/components/: Snackbar.vue  VuetifyLogo.vue
frontend/constants/: index.js
frontend/layouts/: default.vue  zero.vue
frontend/middleware/: auth.js  login.js
frontend/pages/: index.vue  inspire.vue  login.vue  registration.vue
frontend/pages/users/: _id.vue  index.vue
frontend/plugins/: axios.js  swal.js
frontend/store/: auth.js
